Fix of Details Dashboard alignment issue caused by setting filters open on load.

--- a/assets/css/veery-customer.css
+++ b/assets/css/veery-customer.css
@@ -5106,6 +5106,7 @@ section.h3 {
     font-size: 18px;
     font-weight: 500;
     margin: 0;
+    color: #984bce;
 }
 
 .x_panel.main-title {
